5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4076/executions/1578_1326.log
== SUBMITION (2019-03-11 19:57:59) 
-- CODE:
"75"
-- EXECUTION TIME:
0.119089
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:58:24) 
-- CODE:
"75"
-- EXECUTION TIME:
0.215479
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:59:46) 
-- CODE:
 " 75 "
-- EXECUTION TIME:
0.135365
-- ERROR:
  File "/home/codebench/codes/1578/1326/main.py", line 1
    " 75 "
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 20:00:10) 
-- CODE:
 "setenta e cinco"
-- EXECUTION TIME:
0.146232
-- ERROR:
  File "/home/codebench/codes/1578/1326/main.py", line 1
    "setenta e cinco"
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 20:00:22) 
-- CODE:
 "setenta e cinco"
-- ERROR:
File "XXXX", line 1
    "setenta e cinco"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:04:54) 
-- CODE:
 "setenta e cinco"
-- ERROR:
File "XXXX", line 1
    "setenta e cinco"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:05:51) 
-- CODE:
 "setenta e cinco"
-- ERROR:
File "XXXX", line 1
    "setenta e cinco"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:07:27) 
-- CODE:
 print(40+35)
-- ERROR:
File "XXXX", line 1
    print(40+35)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:07:54) 
-- CODE:
print(70)
-- OUTPUT:
70
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:07:57) 
-- CODE:
print(70)
-- EXECUTION TIME:
0.177732
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
70
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 18:08:06) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 18:08:09) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.195554
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
